# UAV

./: .gitignore  API.py  NGCP Git Test.txt  Plane.py  README.md  camera_record.cpp  commandskraken.txt  demo.py  fire_locator.py  hello_dronekit.py  jetson_requirements.txt  linux_env_requirements.txt  main.py  mea_main.py  mission_uploader.py  requirements.txt
Autonomous/: Plane.py  create_mission.py  demo.py  mav.parm  mav.tlog
Communications/: API.py  Client.py  ExamplePythonScript.py  client.py  main.py  sim_main.py
DroneKitScripts/: Client.py  Plane.py  create_mission.py  demo.py
Ext/: PayloadSequence.py
HikerDetection/: ExamplePythonScript.py  KrakenOutputSim.csv  KrakenSim.py  Krakenoutput.csv  Parser.py  SimStart.sh
Scripts/: Plane.py  arm_test.py  blah.py  connect_test.py  demo.py  hello_dronekit.py  mav.parm  mav.tlog  mav.tlog.raw  takeoff_and_land.py  touch  x.txt
install/: local_setup.sh  setup.sh
log/: latest_build
red_detect/red_detect-working_beta/: README.md  package.xml
src/HikerDetection/: setup.cfg  setup.py
src/HikerDetection/HikerDetection/: KrakenOutputSim.csv  Parser.py
src/autonomous/: setup.cfg  setup.py
src/autonomous/autonomous/: Plane.py
src/communications/: package.xml  setup.cfg  setup.py
src/communications/communications/: Client.py  Comms.py  main.py
src/fire_locator/: setup.cfg  setup.py
src/red_detect/: CMakeLists.txt
src/red_detect/include/red_detect/: Diagnostics.cpp  Diagnostics.hpp  NodeTools.cpp  cuda_cv.hpp
src/red_detect/src/: arrayPublisher_example.cpp  arraySubscriber_example.cpp  cuda_cv.cpp
(+45 files in other folders)
